CH-19 #19 Add possibility to highlight any java keyword